2048-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "frontend-deployment"
  namespace: "2048-game"
spec:
  selector:
    matchLabels:
      app: "frontend"
  replicas: 1
  template:
    metadata:
      labels:
        app: "frontend"
    spec:
      containers:
        - image: 922383606859.dkr.ecr.ap-south-1.amazonaws.com/mohit-cicd:3
          imagePullPolicy: Always
          name: "frontend"
          ports:
            - containerPort: 80
